--- a/src/main/webapp/resources/css/grid.css
+++ b/src/main/webapp/resources/css/grid.css
@@ -1,3 +1,19 @@
+.header-topo { 
+	background: url("/acsp/resources/img/logoACSP.png") no-repeat scroll 0 0 transparent; 
+	height: 142px; 
+	margin: 0 0 5px; 
+	text-decoration: none; 
+	text-indent: -9999px; 
+	width: 100%; 
+}
+
+.topp {
+    font-size: 33px;
+    font-weight: bold;
+}
+
+#Começa outra parte do CSS
+
 .container {
     padding-left: 15px;
     padding-right: 15px;
