Criado pagina home. Acerto no layout do form nova aeronave. Fixado Navbar no topo.

--- a/src/main/webapp/resources/css/navbar.css
+++ b/src/main/webapp/resources/css/navbar.css
@@ -1,7 +1,5 @@
+/* Para deixar a barra de navegação fixa tem que aumentar o padding do body */
 body {
-padding: 30px;
-}
-
-.navbar {
-margin-bottom: 30px;
+    min-height: 2000px;
+    padding-top: 70px;
 }
