--- a/src/main/webapp/resources/css/grid.css
+++ b/src/main/webapp/resources/css/grid.css
@@ -1,5 +1,5 @@
 .header-topo { 
-	background: url("/acsp/resources/img/logoACSP.png") no-repeat scroll 0 0 transparent; 
+	background: url("/acsp/resources/img/logoACSP.png") no-repeat scroll 0 0 transparent;
 	height: 142px; 
 	margin: 0 0 5px; 
 	text-decoration: none; 
@@ -12,13 +12,14 @@
     font-weight: bold;
 }
 
-#Começa outra parte do CSS
+/* Come√ßa outra parte do CSS */
 
 .container {
     padding-left: 15px;
     padding-right: 15px;
 }
 
+/*
 h4 {
     margin-top: 25px;
 }
@@ -42,3 +43,5 @@ hr {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
+*/
