Aluno e Aeronave refatorados e layout ok.

--- a/src/main/webapp/resources/css/acsp-custom.css
+++ b/src/main/webapp/resources/css/acsp-custom.css
@@ -1,3 +1,13 @@
+/* que porra é essa????
 span{
     cursor: pointer;
+}
+*/
+
+.btn-custom-block {
+    cursor: pointer;
+    width: 60px;
+}
+.btn-custom-block span {
+    padding: 1px;
 }
