--- a/src/main/webapp/resources/css/DT-bootstrap.css
+++ b/src/main/webapp/resources/css/DT-bootstrap.css
@@ -178,8 +178,8 @@ div.DTFC_LeftFootWrapper table {
 }
 
 #DataTables_Table_0_length select, #DataTables_Table_0_filter input{
-    display: block;
-    width: 100%;
+    /*display: block;
+    width: 100%;*/
     height: 34px;
     padding: 6px 12px;
     font-size: 14px;
