--- a/src/main/webapp/resources/css/navbar.css
+++ b/src/main/webapp/resources/css/navbar.css
@@ -1,5 +1,5 @@
 /* Para deixar a barra de navegação fixa tem que aumentar o padding do body */
 body {
-    min-height: 2000px;
+    /*min-height: 2000px;*/
     padding-top: 70px;
 }
