--- a/src/main/webapp/resources/css/acsp-custom.css
+++ b/src/main/webapp/resources/css/acsp-custom.css
@@ -1,6 +1,7 @@
 .btn-custom-block {
     cursor: pointer;
-    width: 60px;
+    display: inline-block;
+    min-width: 60px;
 }
 .btn-custom-block span {
     padding: 1px;
@@ -8,4 +9,18 @@
 
 .datepicker {
     z-index: 1050 !important;
+}
+
+ul.form-inline {
+    padding-left: 5px;
+}
+
+li.checkbox-inline label {
+    font-weight: normal;
+    margin-bottom: 0px;
+}
+
+li.checkbox-inline {
+    margin-left: 10px !important;
+    width: 30%;
 }
